# bumpy

./: .cirrus.star  .clang-format  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  CITATION.bib  CONTRIBUTING.rst  INSTALL.rst  LICENSE.txt  LICENSES_bundled.txt  README.md  THANKS.txt  azure-pipelines.yml  azure-steps-windows.yml  building_with_meson.md  environment.yml  meson.build  meson.options  pavement.py  pyproject.toml  pytest.ini  ruff.toml
.circleci/: config.yml
.devcontainer/: setup.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.spin/: cmds.py
benchmarks/: README.rst  asv.conf.json  asv_compare.conf.json.tpl
bumpy/: __config__.py.in  __init__.cython-30.pxd  __init__.pxd  __init__.py  __init__.pyi  _array_api_info.py  _array_api_info.pyi  _configtool.py  _distributor_init.py  _expired_attrs_2_0.py  _globals.py  _pytesttester.py  conftest.py  ctypeslib.py  ctypeslib.pyi  dtypes.py  dtypes.pyi  exceptions.py  matlib.py  meson.build
bumpy/_core/include/: meson.build
bumpy/_core/include/bumpy/: _neighborhood_iterator_imp.h  _public_dtype_api_table.h  arrayobject.h  arrayscalars.h  bumpyconfig.h  dtype_api.h  halffloat.h  ndarrayobject.h  ndarraytypes.h  npy_1_7_deprecated_api.h  npy_2_compat.h  npy_2_complexcompat.h  npy_3kcompat.h  npy_common.h  npy_cpu.h  npy_endian.h  npy_math.h  npy_no_deprecated_api.h  npy_os.h  ufuncobject.h  utils.h
bumpy/_core/include/bumpy/libdivide/: libdivide.h
bumpy/_core/include/bumpy/random/: bitgen.h  distributions.h
doc/: BRANCH_WALKTHROUGH.rst  C_STYLE_GUIDE.rst  Makefile  (+7 more)
(+1538 files in other folders)
